# flower

./: .gitignore  Makefile  README.md  docker-compose.yml
db/: Dockerfile  setup.sql
query/: Dockerfile  Makefile  pyproject.toml
query/tests/: test_query.py
solve/: Makefile  README.rst  pyproject.toml  run.sh
solve/tests/: test_solve.py
