[tool.poetry]
name = "solve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PyYAML = "^6.0"
hydra-core = "^1.1.1"
lightgbm = "^3.3.0"
mlflow = "^1.20.2"
numpy = "^1.21.2"
optuna = "^2.10.0"
pandas = "^1.3.3"
pydantic = "^1.8.2"
scikit-learn = "^1.0"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
